--- a/index.html
+++ b/index.html
@@ -7,90 +7,111 @@
 
 <style>
 
-body{
+*{
     margin:0;
-    font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+    padding:0;
+    box-sizing:border-box;
+}
+
+body{
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(135deg,#1f1c2c,#928dab);
     color:white;
 }
 
+/* HEADER */
+
 header{
     text-align:center;
-    padding:70px 20px;
+    padding:80px 20px;
 }
 
-h1{
-    font-size:48px;
-    margin-bottom:10px;
+header h1{
+    font-size:55px;
+    letter-spacing:3px;
 }
 
 .subtitle{
-    font-size:18px;
-    opacity:0.8;
+    font-size:20px;
+    margin-top:10px;
+    opacity:0.9;
 }
+
+.project{
+    margin-top:15px;
+    font-weight:bold;
+    color:#ffd369;
+}
+
+/* SECCIONES */
+
+.section{
+    width:90%;
+    max-width:1000px;
+    margin:50px auto;
+    text-align:center;
+}
+
+/* CARDS */
 
 .container{
     width:90%;
     max-width:1100px;
     margin:40px auto;
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    gap:25px;
+    grid-template-columns: repeat(auto-fit, minmax(260px,1fr));
+    gap:30px;
 }
 
 .card{
-    background:white;
-    color:#333;
-    padding:25px;
-    border-radius:15px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.3);
-    transition:0.3s;
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(10px);
+    padding:30px;
+    border-radius:20px;
+    box-shadow:0 15px 35px rgba(0,0,0,0.4);
+    transition:0.4s;
 }
 
 .card:hover{
-    transform:translateY(-8px);
+    transform: translateY(-10px) scale(1.03);
 }
 
 .card h2{
-    margin-top:0;
-    color:#2c5364;
+    margin-bottom:10px;
+    color:#ffd369;
 }
 
-.section{
-    width:90%;
-    max-width:900px;
-    margin:60px auto;
-    text-align:center;
+.card p{
+    font-size:15px;
 }
 
-.section h2{
-    margin-bottom:20px;
-}
-
-footer{
-    text-align:center;
-    padding:30px;
-    background:#111;
-    margin-top:60px;
-    font-size:14px;
-    letter-spacing:1px;
-    opacity:0.85;
-}
+/* BOTON */
 
 button{
-    background:#2c5364;
-    color:white;
+    margin-top:20px;
+    background: linear-gradient(45deg,#ff512f,#dd2476);
     border:none;
-    padding:12px 25px;
-    border-radius:8px;
+    padding:14px 28px;
+    border-radius:30px;
+    color:white;
+    font-size:16px;
     cursor:pointer;
-    font-size:15px;
     transition:0.3s;
 }
 
 button:hover{
-    background:#1a2f3c;
-    transform:scale(1.05);
+    transform:scale(1.08);
+}
+
+/* FOOTER */
+
+footer{
+    text-align:center;
+    padding:35px;
+    margin-top:60px;
+    background: rgba(0,0,0,0.4);
+    font-size:14px;
+    letter-spacing:1px;
 }
 
 </style>
@@ -101,15 +122,15 @@ button:hover{
 <header>
     <h1>AYNI-BOT</h1>
     <p class="subtitle">Sistema Robótico de Monitoreo Inteligente</p>
-    <p><strong>Proyecto Nº 36458</strong></p>
+    <p class="project">Proyecto Nº 36458</p>
 </header>
 
 <div class="section">
     <h2>Descripción del Sistema</h2>
     <p>
-        Ayni-Bot es un robot diseñado para el monitoreo de la calidad del agua mediante
-        sensores electrónicos que analizan variables físicas y químicas en tiempo real.
-        El sistema permite la visualización remota de datos para control y supervisión.
+        Ayni-Bot es un robot diseñado para el monitoreo de calidad del agua 
+        mediante sensores electrónicos que transmiten datos en tiempo real 
+        para análisis y supervisión remota.
     </p>
 </div>
 
@@ -118,31 +139,31 @@ button:hover{
     <div class="card">
         <h2>EC</h2>
         <p><strong>Conductividad Eléctrica</strong></p>
-        <p>Mide la capacidad del agua para conducir electricidad debido a sales disueltas.</p>
+        <p>Mide la concentración de sales disueltas en el agua.</p>
     </div>
 
     <div class="card">
         <h2>TDS</h2>
         <p><strong>Sólidos Totales Disueltos</strong></p>
-        <p>Indica la concentración de minerales y partículas disueltas en el agua.</p>
+        <p>Indica la cantidad de minerales presentes en el agua.</p>
     </div>
 
     <div class="card">
         <h2>Temperatura</h2>
-        <p><strong>Variable Biológica Clave</strong></p>
-        <p>Influye en reacciones químicas y procesos biológicos del ecosistema acuático.</p>
+        <p><strong>Variable Biológica</strong></p>
+        <p>Influye en procesos químicos y biológicos del ecosistema.</p>
     </div>
 
     <div class="card">
         <h2>Turbidez</h2>
-        <p><strong>Nivel de Opacidad</strong></p>
-        <p>Evalúa la cantidad de partículas suspendidas en el agua.</p>
+        <p><strong>Claridad del Agua</strong></p>
+        <p>Evalúa partículas suspendidas que afectan la calidad.</p>
     </div>
 
     <div class="card">
         <h2>pH</h2>
-        <p><strong>Acidez o Alcalinidad</strong></p>
-        <p>Determina el equilibrio químico del agua y su impacto ambiental.</p>
+        <p><strong>Equilibrio Químico</strong></p>
+        <p>Mide la acidez o alcalinidad del agua.</p>
     </div>
 
 </div>
@@ -150,12 +171,9 @@ button:hover{
 <div class="section">
     <h2>Arquitectura del Sistema</h2>
     <p>
-        El robot integra sensores electrónicos, sistema de procesamiento de datos
-        y comunicación IoT para transmisión en tiempo real hacia una plataforma
-        de monitoreo remoto.
+        El sistema integra sensores electrónicos, procesamiento embebido 
+        y comunicación IoT para monitoreo remoto.
     </p>
-
-    <br>
     <button onclick="alert('Plataforma IoT en desarrollo 🚀')">
         Acceder a Plataforma
     </button>
@@ -169,5 +187,6 @@ button:hover{
 
 </body>
 </html>
+
 
 
